[package]
name = "dolly-accounts-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
dolly-accounts-db = { workspace = true, features = ["dev-context-only-utils"] }
dolly-logger = { workspace = true }
dolly-measure = { workspace = true }
dolly-sdk = { workspace = true }
dolly-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = []
