[package]
name = "dolly-accounts-cluster-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
dolly-account-decoder = { workspace = true }
dolly-accounts-db = { workspace = true }
dolly-clap-utils = { workspace = true }
dolly-cli-config = { workspace = true }
dolly-client = { workspace = true }
dolly-faucet = { workspace = true }
dolly-gossip = { workspace = true }
dolly-logger = { workspace = true }
dolly-measure = { workspace = true }
dolly-net-utils = { workspace = true }
dolly-rpc-client = { workspace = true, features = ["default"] }
dolly-runtime = { workspace = true }
dolly-sdk = { workspace = true }
dolly-streamer = { workspace = true }
dolly-transaction-status = { workspace = true }
dolly-version = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
dolly-core = { workspace = true }
dolly-local-cluster = { workspace = true }
dolly-runtime = { workspace = true, features = ["dev-context-only-utils"] }
dolly-test-validator = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
