[package]
name = "dolly-banking-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
dolly-client = { workspace = true }
dolly-core = { workspace = true }
dolly-gossip = { workspace = true }
dolly-ledger = { workspace = true }
dolly-logger = { workspace = true }
dolly-measure = { workspace = true }
dolly-perf = { workspace = true }
dolly-poh = { workspace = true, features = ["dev-context-only-utils"] }
dolly-runtime = { workspace = true, features = ["dev-context-only-utils"] }
dolly-sdk = { workspace = true }
dolly-streamer = { workspace = true }
dolly-tpu-client = { workspace = true }
dolly-version = { workspace = true }

[features]
dev-context-only-utils = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
