[package]
name = "dolly-banks-client"
description = "Solana banks client"
documentation = "https://docs.rs/dolly-banks-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
futures = { workspace = true }
dolly-banks-interface = { workspace = true }
dolly-program = { workspace = true }
dolly-sdk = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[dev-dependencies]
dolly-banks-server = { workspace = true }
dolly-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[lib]
crate-type = ["lib"]
name = "dolly_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
