[package]
name = "dolly-banks-server"
description = "Solana banks server"
documentation = "https://docs.rs/dolly-banks-server"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
dolly-banks-interface = { workspace = true }
dolly-client = { workspace = true }
dolly-runtime = { workspace = true }
dolly-sdk = { workspace = true }
dolly-send-transaction-service = { workspace = true }
dolly-svm = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[lib]
crate-type = ["lib"]
name = "dolly_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
