[package]
name = "dolly-bench-tps"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dolly-clap-utils = { workspace = true }
dolly-cli-config = { workspace = true }
dolly-client = { workspace = true }
dolly-connection-cache = { workspace = true }
dolly-core = { workspace = true }
dolly-faucet = { workspace = true }
dolly-genesis = { workspace = true }
dolly-gossip = { workspace = true }
dolly-logger = { workspace = true }
dolly-measure = { workspace = true }
dolly-metrics = { workspace = true }
dolly-net-utils = { workspace = true }
dolly-rpc = { workspace = true }
dolly-rpc-client = { workspace = true }
dolly-rpc-client-api = { workspace = true }
dolly-rpc-client-nonce-utils = { workspace = true }
dolly-runtime = { workspace = true }
dolly-sdk = { workspace = true }
dolly-streamer = { workspace = true }
dolly-tpu-client = { workspace = true }
dolly-transaction-status = { workspace = true }
dolly-version = { workspace = true }
spl-instruction-padding = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
dolly-local-cluster = { workspace = true }
dolly-runtime = { workspace = true, features = ["dev-context-only-utils"] }
dolly-test-validator = { workspace = true }
tempfile = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
