[package]
name = "dolly-bucket-map"
description = "dolly-bucket-map"
documentation = "https://docs.rs/dolly-bucket-map"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bv = { workspace = true, features = ["serde"] }
bytemuck = { workspace = true, features = ["derive"] }
log = { workspace = true }
memmap2 = { workspace = true }
modular-bitfield = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
dolly-measure = { workspace = true }
dolly-sdk = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
fs_extra = { workspace = true }
rayon = { workspace = true }
dolly-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "dolly_bucket_map"

[[bench]]
name = "bucket_map"
