[package]
name = "dolly-cargo-registry"
description = "Solana cargo registry"
documentation = "https://docs.rs/dolly-cargo-registry"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true, features = ["full"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
dolly-clap-utils = { workspace = true }
dolly-cli = { workspace = true }
dolly-cli-config = { workspace = true }
dolly-cli-output = { workspace = true }
dolly-logger = { workspace = true }
dolly-remote-wallet = { workspace = true, features = ["default"] }
dolly-rpc-client = { workspace = true, features = ["default"] }
dolly-rpc-client-api = { workspace = true }
dolly-sdk = { workspace = true }
dolly-version = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }

[features]
dev-context-only-utils = []
