[package]
name = "dolly-cli"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/dolly-cli"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
const_format = { workspace = true }
criterion-stats = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
hex = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pretty-hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
dolly-account-decoder = { workspace = true }
dolly-bpf-loader-program = { workspace = true }
dolly-clap-utils = { workspace = true }
dolly-cli-config = { workspace = true }
dolly-cli-output = { workspace = true }
dolly-client = { workspace = true }
dolly-config-program = { workspace = true }
dolly-faucet = { workspace = true }
dolly-loader-v4-program = { workspace = true }
dolly-logger = { workspace = true }
dolly-program-runtime = { workspace = true }
dolly-pubsub-client = { workspace = true }
dolly-remote-wallet = { workspace = true, features = ["default"] }
dolly-rpc-client = { workspace = true, features = ["default"] }
dolly-rpc-client-api = { workspace = true }
dolly-rpc-client-nonce-utils = { workspace = true }
dolly-sdk = { workspace = true }
dolly-tpu-client = { workspace = true, features = ["default"] }
dolly-transaction-status = { workspace = true }
dolly-version = { workspace = true }
dolly-vote-program = { workspace = true }
dolly_rbpf = { workspace = true }
spl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
dolly-streamer = { workspace = true }
dolly-test-validator = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }

[[bin]]
name = "dolly"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
