[package]
name = "dolly-client-test"
description = "Solana RPC Test"
documentation = "https://docs.rs/dolly-client-test"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
futures-util = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
dolly-client = { workspace = true }
dolly-ledger = { workspace = true }
dolly-measure = { workspace = true }
dolly-merkle-tree = { workspace = true }
dolly-metrics = { workspace = true }
dolly-perf = { workspace = true }
dolly-pubsub-client = { workspace = true }
dolly-rayon-threadlimit = { workspace = true }
dolly-rpc = { workspace = true }
dolly-rpc-client = { workspace = true }
dolly-rpc-client-api = { workspace = true }
dolly-runtime = { workspace = true }
dolly-sdk = { workspace = true }
dolly-streamer = { workspace = true }
dolly-test-validator = { workspace = true }
dolly-transaction-status = { workspace = true }
dolly-version = { workspace = true }
systemstat = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
dolly-logger = { workspace = true }
dolly-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
