[package]
name = "dolly-client"
description = "Solana Client"
documentation = "https://docs.rs/dolly-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
dolly-connection-cache = { workspace = true }
dolly-measure = { workspace = true }
dolly-metrics = { workspace = true }
dolly-pubsub-client = { workspace = true }
dolly-quic-client = { workspace = true }
dolly-rpc-client = { workspace = true, features = ["default"] }
dolly-rpc-client-api = { workspace = true }
dolly-rpc-client-nonce-utils = { workspace = true }
dolly-sdk = { workspace = true }
dolly-streamer = { workspace = true }
dolly-thin-client = { workspace = true }
dolly-tpu-client = { workspace = true, features = ["default"] }
dolly-udp-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
