[package]
name = "dolly-core"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/dolly-core"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[badges]
codecov = { repository = "dolly-labs/dolly", branch = "master", service = "github" }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
eager = { workspace = true }
etcd-client = { workspace = true, features = ["tls"] }
futures = { workspace = true }
histogram = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
min-max-heap = { workspace = true }
num_enum = { workspace = true }
prio-graph = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rolling-file = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
dolly-accounts-db = { workspace = true }
dolly-bloom = { workspace = true }
dolly-client = { workspace = true }
dolly-cost-model = { workspace = true }
dolly-entry = { workspace = true }
dolly-frozen-abi = { workspace = true }
dolly-frozen-abi-macro = { workspace = true }
dolly-geyser-plugin-manager = { workspace = true }
dolly-gossip = { workspace = true }
dolly-ledger = { workspace = true }
dolly-measure = { workspace = true }
dolly-metrics = { workspace = true }
dolly-net-utils = { workspace = true }
dolly-perf = { workspace = true }
dolly-poh = { workspace = true }
dolly-program-runtime = { workspace = true }
dolly-quic-client = { workspace = true }
dolly-rayon-threadlimit = { workspace = true }
dolly-rpc = { workspace = true }
dolly-rpc-client-api = { workspace = true }
dolly-runtime = { workspace = true }
dolly-sdk = { workspace = true }
dolly-send-transaction-service = { workspace = true }
dolly-streamer = { workspace = true }
dolly-svm = { workspace = true }
dolly-tpu-client = { workspace = true }
dolly-transaction-status = { workspace = true }
dolly-turbine = { workspace = true }
dolly-unified-scheduler-pool = { workspace = true }
dolly-version = { workspace = true }
dolly-vote = { workspace = true }
dolly-vote-program = { workspace = true }
dolly-wen-restart = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
sys-info = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
trees = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
fs_extra = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
# See order-crates-for-publishing.py for using this unusual `path = "."`
dolly-core = { path = ".", features = ["dev-context-only-utils"] }
dolly-logger = { workspace = true }
dolly-poh = { workspace = true, features = ["dev-context-only-utils"] }
dolly-program-runtime = { workspace = true }
dolly-runtime = { workspace = true, features = ["dev-context-only-utils"] }
dolly-sdk = { workspace = true, features = ["dev-context-only-utils"] }
dolly-stake-program = { workspace = true }
static_assertions = { workspace = true }
systemstat = { workspace = true }
test-case = { workspace = true }

[target."cfg(unix)".dependencies]
sysctl = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[features]
dev-context-only-utils = []

[[bench]]
name = "banking_stage"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
