[package]
name = "dolly-cost-model"
description = "Solana cost model"
documentation = "https://docs.rs/dolly-cost-model"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
dolly-address-lookup-table-program = { workspace = true }
dolly-bpf-loader-program = { workspace = true }
dolly-compute-budget-program = { workspace = true }
dolly-config-program = { workspace = true }
dolly-frozen-abi = { workspace = true }
dolly-frozen-abi-macro = { workspace = true }
dolly-loader-v4-program = { workspace = true }
dolly-metrics = { workspace = true }
dolly-program-runtime = { workspace = true }
dolly-sdk = { workspace = true }
dolly-stake-program = { workspace = true }
dolly-system-program = { workspace = true }
dolly-vote-program = { workspace = true }

[lib]
crate-type = ["lib"]
name = "dolly_cost_model"

[dev-dependencies]
dolly-logger = { workspace = true }
dolly-sdk = { workspace = true, features = ["dev-context-only-utils"] }
static_assertions = { workspace = true }
test-case = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }
