[package]
name = "dolly-dos"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
dolly-bench-tps = { workspace = true }
dolly-client = { workspace = true }
dolly-core = { workspace = true }
dolly-faucet = { workspace = true }
dolly-gossip = { workspace = true }
dolly-logger = { workspace = true }
dolly-measure = { workspace = true }
dolly-net-utils = { workspace = true }
dolly-perf = { workspace = true }
dolly-quic-client = { workspace = true }
dolly-rpc = { workspace = true }
dolly-rpc-client = { workspace = true }
dolly-sdk = { workspace = true }
dolly-streamer = { workspace = true }
dolly-tpu-client = { workspace = true }
dolly-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
dolly-local-cluster = { workspace = true }
