[package]
name = "dolly-entry"
description = "Solana Entry"
documentation = "https://docs.rs/dolly-poh"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
dlopen2 = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
dolly-measure = { workspace = true }
dolly-merkle-tree = { workspace = true }
dolly-metrics = { workspace = true }
dolly-perf = { workspace = true }
dolly-rayon-threadlimit = { workspace = true }
dolly-sdk = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
dolly-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "dolly_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
