[package]
name = "dolly-genesis-utils"
description = "Solana Genesis Utils"
documentation = "https://docs.rs/dolly-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
dolly-accounts-db = { workspace = true }
dolly-download-utils = { workspace = true }
dolly-rpc-client = { workspace = true }
dolly-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "dolly_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
