[package]
name = "dolly-genesis"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/dolly-genesis"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dolly-accounts-db = { workspace = true }
dolly-clap-utils = { workspace = true }
dolly-cli-config = { workspace = true }
dolly-entry = { workspace = true }
dolly-ledger = { workspace = true }
dolly-logger = { workspace = true }
dolly-runtime = { workspace = true }
dolly-sdk = { workspace = true }
dolly-stake-program = { workspace = true }
dolly-version = { workspace = true }
dolly-vote-program = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
dolly-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[[bin]]
name = "dolly-genesis"
path = "src/main.rs"

[lib]
name = "dolly_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
