[package]
name = "dolly-geyser-plugin-manager"
description = "The Solana Geyser plugin manager."
documentation = "https://docs.rs/dolly-geyser-plugin-manager"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
crossbeam-channel = { workspace = true }
json5 = { workspace = true }
jsonrpc-core = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
dolly-accounts-db = { workspace = true }
dolly-entry = { workspace = true }
dolly-geyser-plugin-interface = { workspace = true }
dolly-ledger = { workspace = true }
dolly-measure = { workspace = true }
dolly-metrics = { workspace = true }
dolly-rpc = { workspace = true }
dolly-runtime = { workspace = true }
dolly-sdk = { workspace = true }
dolly-transaction-status = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
