[package]
name = "dolly-keygen"
description = "Solana key generation utility"
documentation = "https://docs.rs/dolly-keygen"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
clap = { version = "3.1.5", features = ["cargo"] }
dirs-next = { workspace = true }
num_cpus = { workspace = true }
dolly-clap-v3-utils = { workspace = true }
dolly-cli-config = { workspace = true }
dolly-remote-wallet = { workspace = true, features = ["default"] }
dolly-sdk = { workspace = true }
dolly-version = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "dolly-keygen"
path = "src/keygen.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
