[package]
name = "dolly-ledger-tool"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/dolly-ledger-tool"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
chrono = { workspace = true, features = ["default"] }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
csv = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
histogram = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dolly-account-decoder = { workspace = true }
dolly-accounts-db = { workspace = true }
dolly-bpf-loader-program = { workspace = true }
dolly-clap-utils = { workspace = true }
dolly-cli-output = { workspace = true }
dolly-core = { workspace = true }
dolly-cost-model = { workspace = true }
dolly-entry = { workspace = true }
dolly-geyser-plugin-manager = { workspace = true }
dolly-gossip = { workspace = true }
dolly-ledger = { workspace = true }
dolly-logger = { workspace = true }
dolly-measure = { workspace = true }
dolly-program-runtime = { workspace = true }
dolly-rpc = { workspace = true }
dolly-runtime = { workspace = true, features = ["dev-context-only-utils"] }
dolly-sdk = { workspace = true }
dolly-stake-program = { workspace = true }
dolly-storage-bigtable = { workspace = true }
dolly-streamer = { workspace = true }
dolly-transaction-status = { workspace = true }
dolly-unified-scheduler-pool = { workspace = true }
dolly-version = { workspace = true }
dolly-vote-program = { workspace = true }
dolly_rbpf = { workspace = true, features = ["debugger"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
bytecount = { workspace = true }

[features]
dev-context-only-utils = []

[target."cfg(unix)".dependencies]
signal-hook = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
