[package]
name = "dolly-ledger"
description = "Solana ledger"
documentation = "https://docs.rs/dolly-ledger"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
assert_matches = { workspace = true }
bincode = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
chrono-humanize = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
fs_extra = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
mockall = { workspace = true }
num_cpus = { workspace = true }
num_enum = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
reed-solomon-erasure = { workspace = true, features = ["simd-accel"] }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
dolly-account-decoder = { workspace = true }
dolly-accounts-db = { workspace = true }
dolly-bpf-loader-program = { workspace = true }
dolly-cost-model = { workspace = true }
dolly-entry = { workspace = true }
dolly-frozen-abi = { workspace = true }
dolly-frozen-abi-macro = { workspace = true }
dolly-measure = { workspace = true }
dolly-metrics = { workspace = true }
dolly-perf = { workspace = true }
dolly-program-runtime = { workspace = true }
dolly-rayon-threadlimit = { workspace = true }
dolly-runtime = { workspace = true }
dolly-sdk = { workspace = true }
dolly-stake-program = { workspace = true }
dolly-storage-bigtable = { workspace = true }
dolly-storage-proto = { workspace = true }
dolly-svm = { workspace = true }
dolly-transaction-status = { workspace = true }
dolly-vote = { workspace = true }
dolly-vote-program = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
static_assertions = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
trees = { workspace = true }

[dependencies.rocksdb]
# Avoid the vendored bzip2 within rocksdb-sys that can cause linker conflicts
# when also using the bzip2 crate
version = "0.21.0"
default-features = false
features = ["lz4"]

[dev-dependencies]
bs58 = { workspace = true }
dolly-account-decoder = { workspace = true }
dolly-logger = { workspace = true }
dolly-runtime = { workspace = true, features = ["dev-context-only-utils"] }
spl-pod = { workspace = true }
test-case = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[features]
dev-context-only-utils = []

[lib]
crate-type = ["lib"]
name = "dolly_ledger"

[[bench]]
name = "sigverify_shreds"

[[bench]]
name = "blockstore"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
