[package]
name = "dolly-local-cluster"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/dolly-local-cluster"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
dolly-accounts-db = { workspace = true }
dolly-client = { workspace = true }
dolly-config-program = { workspace = true }
dolly-core = { workspace = true }
dolly-entry = { workspace = true }
dolly-gossip = { workspace = true }
dolly-ledger = { workspace = true }
dolly-logger = { workspace = true }
dolly-pubsub-client = { workspace = true }
dolly-quic-client = { workspace = true }
dolly-rpc-client = { workspace = true }
dolly-rpc-client-api = { workspace = true }
dolly-runtime = { workspace = true }
dolly-sdk = { workspace = true }
dolly-stake-program = { workspace = true }
dolly-streamer = { workspace = true }
dolly-thin-client = { workspace = true }
dolly-tpu-client = { workspace = true }
dolly-turbine = { workspace = true }
dolly-vote = { workspace = true }
dolly-vote-program = { workspace = true }
static_assertions = { workspace = true }
tempfile = { workspace = true }
trees = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
fs_extra = { workspace = true }
gag = { workspace = true }
serial_test = { workspace = true }
dolly-download-utils = { workspace = true }
dolly-ledger = { workspace = true, features = ["dev-context-only-utils"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
